--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,26 @@
 
     <build>
         <plugins>
+                 <plugin>                 
+                          <groupId>org.springframework.boot</groupId>                
+                          <artifactId>spring-boot-maven-plugin</artifactId>                
+                          <configuration>                     
+                                   <image>                         
+                                            <builder>paketobuildpacks/builder-jammy-base:latest</builder>                     
+                                   </image>                     
+                                   <excludes>                        
+                                            <exclude>                          
+                                                     <groupId>org.projectlombok</groupId>                  
+                                                     <artifactId>lombok</artifactId>                        
+                                            </exclude>                   
+                                   </excludes>               
+                          </configuration>           
+                 </plugin>
             
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.7</version>
+            <version>3.9.5</version>
             <configuration>
                 <release>17</release>
             </configuration>
