--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
         <plugins>
                  <plugin>                 
                           <groupId>org.springframework.boot</groupId>                
-                          <artifactId>spring-boot-maven-plugin</artifactId>                
+                          <artifactId>spring-boot-maven-plugin</artifactId> 
+                          <version>3.9.5</version>
                           <configuration>                     
                                    <image>                         
                                             <builder>paketobuildpacks/builder-jammy-base:latest</builder>                     
