--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <name>mongo-demo</name>
     <description>mongo-demo</description>
     <properties>
-        <java.version>17</java.version>
+         <java.version>17</java.version>
+         <maven.compiler.release>17</maven.compiler.release>
     </properties>
     <dependencies>
         <dependency>
@@ -60,6 +61,14 @@
                                    </excludes>               
                           </configuration>           
                  </plugin>
+                 <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-compiler-plugin</artifactId>
+                      <version>3.11.0</version>
+                      <configuration>
+                          <release>7</release>
+                      </configuration>
+                  </plugin>
             
         </plugins>
     </build>
