--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,29 @@
 version: '3'
-
 services:
-  spring-boot-app:
+  mongo-demo-app-service:
     image: ihebkhalfallah/mongo-demo:1
     ports:
-      - "9090:9090"
-    depends_on:
-      - mongo
+      - "30081:8080"
     environment:
-      SPRING_DATA_MONGODB_URI: "mongodb://mongo:27017/gte3"
-    networks:
-      - backend
+      - MONGO_DB=${MONGO_DB_SERVICE:mongo-demo-db-service}
+      - MONGO_HOST=${MONGO_DB_DATABASE:gte3}
+    imagePullPolicy: Never
+    depends_on:
+      - mongo-demo-db-service
 
-  mongo:
-    image: mongo
+  mongo-demo-db:
+    image: mongo:latest
     ports:
       - "27017:27017"
-    networks:
-      - backend
-    volumes:
-      - mongodb-data:/data/db
 
-volumes:
-  mongodb-data:
+  mongo-demo-db-service:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
 
-networks:
-  backend:
+  mongo-demo-db-config:
+    name: mongo-demo-db-config
+    data:
+      host: ${MONGO_DB_SERVICE:mongo-demo-db-service}
+      database: ${MONGO_DB_DATABASE:gte3}
+
