--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - "30081:8080"
     environment:
-      - MONGO_DB=${MONGO_DB_SERVICE:-mongo-demo-db-service}
-      - MONGO_HOST=${MONGO_DB_DATABASE:-gte3}
+      - MONGO_DB_SERVICE=mongo-demo-db-service
+      - MONGO_DB_DATABASE=gte3
     depends_on:
       - mongo-demo-db-service
 
@@ -15,3 +15,7 @@ services:
     ports:
       - "27017:27017"
 
+  mongo-demo-db-service:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
