--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "9090:9090"
     depends_on:
-      - mongo-service
+      - mongo
     environment:
       SPRING_DATA_MONGODB_URI: "mongodb://mongo:27017/gte3"
     networks:
