--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,11 @@ services:
     volumes:
       - mongodb-data:/data/db
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8080:80"
+
 volumes:
   mongodb-data:
 
