--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       SPRING_DATA_MONGODB_URI: "mongodb://mongo:27017/gte3"
     networks:
       - backend
+    network_mode: bridge
 
   mongo:
     image: mongo
@@ -18,6 +19,7 @@ services:
       - "27017:27017"
     networks:
       - backend
+    network_mode: bridge
     volumes:
       - mongodb-data:/data/db
 
