--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   myapp:
-    image: ihebkhalfallah/mongo-demo:1
+    image: ihebkhalfallah/mongo-demo
     ports:
       - "9091:9090"
     depends_on:
